[package]
name = "wlist"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
